<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:text="@string/serverlist_dialog_new_server_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Subhead" />

        <TextView
            android:text="@string/serverlist_dialog_new_server_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/txt_server_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext" />


        <TextView
            android:text="@string/serverlist_dialog_new_server_url_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Subhead" />

        <TextView
            android:text="@string/serverlist_dialog_new_server_url_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/txt_server_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:imeOptions="actionDone" />

        <TextView
            android:text="@string/serverlist_dialog_new_server_lite_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Subhead" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/chk_lite"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:checked="true"
                android:text="@string/serverlist_dialog_new_server_lite_label"  />
        </LinearLayout>

        <!-- Advanced Options -->
        <Button
            android:id="@+id/advanced_options"
            android:text="@string/serverlist_dialog_new_server_advanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/buttonBarButtonStyle" />
        <LinearLayout
            android:id="@+id/advanced_options_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:text="@string/serverlist_dialog_new_server_padprefix_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Subhead" />

            <TextView
                android:text="@string/serverlist_dialog_new_server_padprefix_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txt_server_padprefix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                android:imeOptions="actionDone" />

            <TextView
                android:text="@string/serverlist_dialog_new_server_jquery_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Subhead" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/chk_jquery"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/serverlist_dialog_new_server_jquery_label" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>