<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/new_pad_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:orientation="vertical"
    android:background="?attr/colorSurface">

    <include
        android:id="@+id/include"
        layout="@layout/dialog_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:hint="@string/edit_pad_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_pad_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_pad_explanation" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_pad_local_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_pad_local_name" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_pad_local_name_explanation" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_pad_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:hint="@string/choose_a_server" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_pad_pad_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:hint="@string/padlist_group_select_dialog" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_pad_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:checked="true"
            android:hint="@string/save_pad" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>