<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".NewPad"
    android:id="@+id/settings_layout">

    <LinearLayout
        android:id="@+id/formLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/new_pad_explanation" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="11dp"
            android:hint="@string/write_pad_name" />

        <TextView
            android:id="@+id/textViewLocalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/new_pad_local_name" />

        <EditText
            android:id="@+id/editTextLocalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewLocalName"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="11dp"
            android:hint="@string/write_pad_local_name" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formLayout"
        android:onClick="onCreateButtonClick"
        android:text="@string/go_pad"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_server"
        android:id="@+id/textView2"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:singleLine="true"
        android:lines="1"
        android:scrollHorizontally="true"
        android:ellipsize="end" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:spinnerMode="dialog" />

</RelativeLayout>
